# jupiter-design-system

./: AI_COLLABORATION_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_INSIGHTS.md  LICENSE  README.md  TODO_QDRANT_IMPORT_1.md
ai-context-rules/: README.md
ai-context-rules/critical_rules/: anticipate-documentation-scope.md  discovery-first-documentation.md
ai-context-rules/debugging_rules/: reality-based-documentation.md
ai-context-rules/rust_knowledge/: design-system-patterns.md
ai-context-rules/testing_rules/: documentation-code-alignment.md  test-driven-understanding.md
ai-context-rules/workflow_rules/: comprehensive-search-patterns.md  iterative-validation-pattern.md  user-feedback-signals.md
docs/: ARCHITECTURE.md  CURRENT_LIMITATIONS.md  CURRENT_STATUS.md  IMPLEMENTATION.md  INTERACTIVE_BUILDERS.md  MIGRATION.md  PERFORMANCE.md  README.md  ROADMAP.md  TESTING.md  THINGS_THAT_STILL_NEED_TO_WORK.md  TODO_QDRANT_IMPORT_2.md  TODO_QDRANT_IMPORT_3.md
docs/ai-collaboration-rules/: README.md  critical-assume-incomplete-tests.md  critical-design-system-completeness.md  critical-discovery-first-development.md  critical-documentation-validation.md  critical-functional-validation.md  critical-integration-first-documentation.md  critical-output-validation.md  critical-reality-based-documentation.md  critical-separate-current-vs-future.md  critical-test-count-verification.md  critical-test-driven-understanding.md  rust-design-system-patterns.md  (+22 more)
examples/: basic_usage.rs  button_usage.rs  design_patterns.rs  psychedelic_demo.rs
src/: lib.rs
(+106 files in other folders)
